# Computer-Graphics-and-Multimedia

./: README.md
assignment01/: CMakeLists.txt  README.md
assignment01/Common/cs4722/: buffer_utilities.h  callbacks.h  cs4722_exception.h  load_shaders.h  part.h  part_elliptical_orbit.h  shape.h  view.h  window.h  x11.h
assignment01/Common/red_book/: vapp.h  vbm.h  vgl.h
assignment01/problem-1/: one_point.cpp  vertex_shader01.glsl
assignment01/problem-2/: fragment_shader02.glsl  one_point.cpp
assignment01/problem-3/: fragment_shader03.glsl  one_point.cpp
assignment01/problem-4/: one_point.cpp  vertex_shader04.glsl
assignment01/problem-5/: one_point.cpp  vertex_shader05.glsl
assignment01/problem-6/: one_point.cpp  vertex_shader06.glsl
assignment02/: CMakeLists.txt
assignment02/01-gradient/: fragment_shader_gradient.glsl  gradient.cpp  vertex_shader_gradient.glsl
assignment02/02-solid/: solid.cpp
assignment02/Common/cs4722/: cs4722_exception.h  load_shaders.h  (+2 more)
assignment03/: CMakeLists.txt
assignment03/assignment03/: assignment03.cpp  fragment_shader.glsl
assignment04/: CMakeLists.txt
assignment04/01-elliptical-orbit/: 01-fragment_shader.glsl  elliptical_orbit.cpp
assignment04/02-alternate-specifications/: alternate_specifications.cpp
assignment05/: CMakeLists.txt
assignment05/assignment05/: assignment05.cpp  parts_fragment_shader02.glsl  parts_vertex_shader02.glsl  setup_parts.cpp  setup_skybox.cpp  sharing.h  skybox.cpp
m01-first-program/: CMakeLists.txt
m01-first-program/01-one-point/: fragment_shader01.glsl  one_point.cpp  vertex_shader01.glsl
m02-data/: CMakeLists.txt
m02-data/02-many-points/: fragment_shader02.glsl  many_points.cpp  vertex_shader02.glsl
m02-data/03-many-colors/: many_colors.cpp
m02-data/04-square/: example4-square.cpp  fragment_shader04.glsl  vertex_shader04.glsl
m02-data/05-shapes/: fragment_shader05.glsl  shapes.cpp
m02-data/06-coordinate-orientation/: coordinate_orientation.cpp
m03-transformation/: CMakeLists.txt  vertex_shader-m04.glsl
m03-transformation/01-static-transform/: static-transform.cpp
m03-transformation/01A-use-transform/: static-transform-use-transform.cpp
m03-transformation/02-use-part-and-attributes/: use_part.cpp
m03-transformation/03-multiple-parts/: multiple_parts.cpp
m03-transformation/04-shared-shapes/: shared_shapes.cpp
m03-transformation/04A-buffer-utilities/: shared_shapes_buffer_utilities.cpp
m03-transformation/05-animation/: animation.cpp
m03-transformation/05A-rotate-about-center/: rotate-about-center.cpp
m03-transformation/05B-oscillation/: oscillation.cpp  part_oscillating.cpp  part_oscillating.h
m03-transformation/06-animation-many/: animation_many.cpp
m03-transformation/07-use-material/: fragment_shader-07.glsl  use_material.cpp  vertex_shader-07.glsl
m03-transformation/08-mix-material-shape-pattern/: fragment_shader-08.glsl  mix_material_shape.cpp  vertex_shader-08.glsl
m04-view-projection/: CMakeLists.txt  fragment_shader.glsl  vertex_shader.glsl
m04-view-projection/01-camera/: animation-with-camera.cpp
m04-view-projection/02-projection/: view-and-projection.cpp
m04-view-projection/03-user-interaction/: user-interaction.cpp
m04-view-projection/04-window-events/: window_events.cpp
m04-view-projection/04A-window-events-callbacks-util/: window_events.cpp
m05-textures/: CMakeLists.txt
m05-textures/01-texture-from-pattern/: computed-image.cpp  fragment_shader01.glsl  vertex_shader01.glsl
m05-textures/02-texture-from-image/: file-image.cpp
m05-textures/03-texture-on-shape/: fragment_shader3.glsl  texture_on_shape.cpp  vertex_shader3.glsl
m05-textures/04-multiple-textures/: multiple_textures.cpp
m05-textures/05-min-filters/: min-filters.cpp
m05-textures/06-mixed-colors/: fragment_shader06.glsl  mixed-colors.cpp
m05-textures/media/: notes.txt
m06-advanced-textures/: CMakeLists.txt
m06-advanced-textures/01-cube-map/: cube-map.cpp  fragment_shader01.glsl  vertex_shader01.glsl
m06-advanced-textures/02-sky-box/: setup_parts.cpp  setup_skybox.cpp  sharing.h  skybox.cpp  skybox_fragment_shader02.glsl  skybox_vertex_shader02.glsl
m06-advanced-textures/03-reflecting-object/: reflecting.cpp  reflecting_fragment_shader03.glsl  reflecting_vertex_shader03.glsl  setup_reflecting.cpp  sharing.h
m06-advanced-textures/04-render-to-texture/: render-to-texture.cpp  setup_parts.cpp  setup_view_in_view.cpp  sharing.h  view_in_view_fragment_shader04.glsl  view_in_view_vertex_shader04.glsl
m06-advanced-textures/05-image-processing/: image-processing.cpp  image_processing_fragment_shader.glsl  image_processing_vertex_shader.glsl  setup_parts.cpp  setup_view_in_view.cpp  sharing.h
m06-advanced-textures/06-point-sprites/: fragment_shader06.glsl  point_sprites.cpp  vertex_shader06.glsl
m06-advanced-textures/07-point-sprites-2/: fragment_shader12.glsl  point_sprites.cpp  vertex_shader12.glsl
m07-lighting-and-shading/: CMakeLists.txt
m07-lighting-and-shading/01-no-lighting/: fragment_shader01.glsl  no-lighting.cpp  vertex_shader01.glsl
m07-lighting-and-shading/02-ambient-light/: ambient-light.cpp  fragment_shader02.glsl  vertex_shader02.glsl
m07-lighting-and-shading/03-visualize-normals/: fragment_shader03.glsl  vertex_shader03.glsl  visualize_normals.cpp
m07-lighting-and-shading/04-adjust-normals/: adjust_normals.cpp  fragment_shader04.glsl  vertex_shader04.glsl
m07-lighting-and-shading/05-directional-lighting/: directional_lighting.cpp  fragment_shader05.glsl  vertex_shader05.glsl
m07-lighting-and-shading/06-point-lighting/: fragment_shader06.glsl  point_lighting.cpp  vertex_shader06.glsl
m07-lighting-and-shading/07-shading-textures/: fragment_shader07.glsl  shading_textures.cpp  vertex_shader07.glsl
m08-procedural-textures/: CMakeLists.txt
m08-procedural-textures/01-stripes/: fragment_shader01.glsl  stripes.cpp  vertex_shader01.glsl
m08-procedural-textures/03-bricks/: bricks.cpp  fragment_shader03.glsl  vertex_shader03.glsl
m08-procedural-textures/05-fractal/: fractal.cpp  fragment_shader05.glsl  vertex_shader05.glsl
(+36 files in other folders)
