cmake_minimum_required(VERSION 3.17)
project(m05_textures)



link_libraries(cs4722 cs4722external glfw3dll opengl32 glu32)

set(CMAKE_CXX_STANDARD 20)

include_directories( Common ../Common)
link_directories( Common ../Common)

add_executable(01-texture-from-pattern 01-texture-from-pattern/computed-image.cpp)
configure_file(01-texture-from-pattern/vertex_shader01.glsl .)
configure_file(01-texture-from-pattern/fragment_shader01.glsl .)

add_executable(02-texture-from-image 02-texture-from-image/file-image.cpp)
#configure_file(02-texture-from-image/vertex_shader02.glsl .)
#configure_file(02-texture-from-image/fragment_shader02.glsl .)

add_executable(03-texture-on-shape 03-texture-on-shape/texture_on_shape.cpp)
configure_file(03-texture-on-shape/vertex_shader3.glsl .)
configure_file(03-texture-on-shape/fragment_shader3.glsl .)

add_executable(04-multiple-textures 04-multiple-textures/multiple_textures.cpp)

add_executable(05-min-filters 05-min-filters/min-filters.cpp)

add_executable(06-mixed-colors 06-mixed-colors/mixed-colors.cpp)
configure_file(06-mixed-colors/fragment_shader06.glsl .)
configure_file(06-mixed-colors/vertex_shader06.glsl .)
